--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "oph": "triamudomopenhouse2019"
+    "oph": "triamudomopenhouse2019",
+    "default": "triamudomopenhouse2019"
   }
 }
